@@ -1,5 +1,11 @@
 2013-04-11 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/gen.c,
+	  src/stm8/ralloc.c:
+	  Fix handling of stack part of local variables.
+
+2013-04-11 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/stm8/gen.c:
 	  STM8: Implement basic pointer writes, fix handling of 16-bit literals.
 
